[package]
name = "ddose-isotp"
version = "0.1.0"
edition = "2021"
authors = [
    "Pascal Koestler <pascal.koestler@outlook.de>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/PascalKoe/ddose"

[dependencies]
ddose-common = { path = "../ddose-common" }

embedded-hal = { version = "0.2" }
libc = { version = "0.2" }
tokio = { version = "1", features = [ "net" ]}

[dev-dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros" ] }
