[package]
name = "ddose-uds"
version = "0.1.0"
edition = "2021"
authors = [
    "Pascal Koestler <pascal.koestler@outlook.de>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/PascalKoe/ddose"

[dependencies]
ddose-isotp = { path = "../ddose-isotp" }

libc = { version = "0.2" }
thiserror = "1"
tokio = { version = "1", features = [ "net", "time" ]}

[dev-dependencies]
ddose-common = { path = "../ddose-common" }
embedded-hal = { version = "0.2" }
