[package]
name = "ddose"
version = "0.1.0"
edition = "2021"
authors = [
    "Pascal Koestler <pascal.koestler@outlook.de>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/PascalKoe/ddose"

[dependencies]
ddose-common = { path = "../ddose-common" }
ddose-can = { path = "../ddose-can" }
ddose-isotp = { path = "../ddose-isotp" }
ddose-uds = { path = "../ddose-uds" }
